HEIF: fix import/export of HDR alpha channels

BUG: 460380
(cherry picked from commit a5d1d31d7ecd6e5189523ab8ca42a771b2271c6a)